Bug 429394 - Unnecessary Quit action in the "Shortcuts Configuration" section in the settings of the Clipboard applet
Summary: Unnecessary Quit action in the "Shortcuts Configuration" section in the setti...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Clipboard widget & pop-up (other bugs)
Version First Reported In: 5.15.3
Platform: Other Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-20 13:14 UTC by popov895
Modified: 2021-04-30 01:02 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22
Sentry Crash Report:


Attachments
Unnecessary action (122.48 KB, image/png)
2020-11-20 13:14 UTC, popov895
Details

Note You need to log in before you can comment on or make changes to this bug.
Description popov895 2020-11-20 13:14:58 UTC
Created attachment 133499 [details]
Unnecessary action

SUMMARY

There is an unnecessary action on the "Shortcuts Configuration" section in the settings of the Clipboard applet that cannot be assigned a keyboard shortcut. Also, this action doesn't make sense, since it's impossible to quit the applet.

STEPS TO REPRODUCE

1. Open the settings of the Clipboard applet
2. Go to the "Shortcuts Configuration" section
3. Try to set shortcut for the "Quit" action

SOFTWARE/OS VERSIONS

Linux/KDE Plasma: KDE neon 5.20 User Edition / X11
KDE Plasma Version: 5.20.3
KDE Frameworks Version: 5.75.0
Qt Version: 5.15.1
Comment 1 Bug Janitor Service 2021-03-21 21:44:07 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/730
Comment 2 Nate Graham 2021-04-30 01:02:12 UTC
Git commit 51538e1ad7850f32dcfd190f02b4237861981599 by Nate Graham, on behalf of Eugene Popov.
Committed on 30/04/2021 at 01:02.
Pushed by ngraham into branch 'master'.

Remove unnecessary Quit action

This patch removes the unnecessary Quit action when not in standalone mode
since it's impossible to quit a Plasma applet.
FIXED-IN: 5.22

M  +8    -4    klipper/klipper.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/51538e1ad7850f32dcfd190f02b4237861981599