Remove unnecessary Quit action

This patch removes the unnecessary Quit action when not in standalone mode
since it's impossible to quit a Plasma applet.

BUG: 429394
FIXED-IN: 5.22